# practica2/practicaCys2/api/server nuevo cys/service/CompartirService.js
@@ -1,6 +1,6 @@
 'use strict';
 
-
+const db=require('../db.js');
 /**
  * Compartir un fichero
  *
@@ -9,10 +9,10 @@
  **/
 exports.compartir = function(body) {
   return new Promise(function(resolve, reject) {
-    const {archivo,usuario,kfile} = body;
-    const query = 'INSERT INTO compartidos (archivo,usuario,kfile) VALUES (?,?,?)';
+    const {archivo,usuario,kfile,iv} = body;
+    const query = 'INSERT INTO compartidos (archivo,usuario,kfile,iv) VALUES (?,?,?,?)';
     
-    db.query(query, [archivo,usuario,kfile], (error, results) => {
+    db.query(query, [archivo,usuario,kfile,iv], (error, results) => {
       if (error) {
         reject(error);
       } else {
@@ -20,5 +20,21 @@ exports.compartir = function(body) {
       }
     });
   });
+}
+
+exports.getFicherosByUser = function(usuario) {
+  return new Promise(function(resolve, reject) {
+    const query = 'SELECT f.* FROM compartidos c join fichero f on (c.archivo=f.idFichero) WHERE usuario = ?';
+    
+    db.query(query, [usuario], (error, results) => {
+      if (error) {
+        reject(error);
+      } else if (results.length === 0) {
+        reject(error);
+      } else {
+        resolve(results);
+      }
+    });
+  }); 
 }
 
